2017-10-30 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Test mcs51 huge model and tlcs90.

2017-10-29 Philipp Klaus Krause <pkk AT spth.de>

	* lib/doc-archive.mk:
	  Update for current ucsim documentation files.

2017-10-28 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile,
	  README,
	  lib/ports.mk,
	  ports:
	  Remove unused infrastructure for port-specific builds.

2016-02-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* lib/local.mk: cosmetic only
	* lib/variables.mk: added test-mcs51-large-stack-auto
	* local/derna.mk: fixed typo
	* sdcc-build-bootstrap.sh: added sleep on svn checkout fail

2014-10-16 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* components/sdcc.mk: use --disable-werror with configure when
	  building sdcc to avoid problems on cf hosts with newer gcc/clang

2013-12-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/bootstrap.mk: copy either sjlj or seh support dll

2013-09-08 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* local/macspot.mk: new name for dhcp101

2013-08-07 Borut Razem <borut.razem AT gmail.com>

	* lib/doc-archive.mk: fixed copying of pdf documents
	  html documentation copying commented out since it is not
	  generated any more

2013-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* lib/variables.mk:
	  Enable stm8 regression testing.

2013-05-30 Raphael Neider <rneider AT web.de>

	* components/sdcc.mk: remove --enable-new-pics

2013-03-15 Borut Razem <borut.razem AT gmail.com>

	* lib/variables.mk, lib/fetch.mk: introduced SVN_ROOT

2013-03-12 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh: changed SVNROOT after after project transition to Allura

2012-12-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* local/cf-ppc-macosx.mk: created for Mac OS X 10.5 PPC machine
	  generating universal-apple-macosx snapshots

2012-08-17 Borut Razem <borut.razem AT gmail.com>

	* local/wizard.mk: renamed, removed fsigned-char since sdcc now